--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
-  "name": "aura-challenge-zips",
-  "version": "0.0.0",
-  "main": "src/index.js",
-  "engines": {
-    "node": ">=12.0.0",
-    "npm": ">=6.0.0"
-  },
-  "devDependencies": {
-    "jest": "^26.0.1",
-    "prettier": "^1.19.1"
-  },
-  "dependencies": {},
-  "scripts": {
-    "format:fix": "prettier --write **/*.{js,ts,md}",
-    "test": "jest"
-  }
+    "name": "aura-challenge-zips",
+    "version": "0.0.0",
+    "main": "src/index.js",
+    "engines": {
+        "node": ">=12.0.0",
+        "npm": ">=6.0.0"
+    },
+    "devDependencies": {
+        "@types/aws-lambda": "^8.10.51",
+        "@types/jest": "^26.0.18",
+        "@types/node": "^13.13.5",
+        "aws-sdk": "^2.655.0",
+        "jest": "^26.6.3",
+        "prettier": "^1.19.1",
+        "ts-jest": "^26.4.4",
+        "typescript": "^3.8.3"
+    },
+    "dependencies": {},
+    "scripts": {
+        "format:fix": "prettier --write **/*.{js,ts,md,json}",
+        "test": "jest",
+        "compile": "tsc",
+        "dev": "tsc --watch & sam local start-api"
+    },
+    "prettier": {
+        "trailingComma": "es5",
+        "tabWidth": 4,
+        "semi": true,
+        "singleQuote": true
+    }
 }
